# rcat

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: rcat.1.in  rless.1.in
po/: de.po  es.po  ja.po  rcat.pot  zh_CN.po
src/: highlight.cpp  highlight.hpp  i18n.cpp  i18n.hpp  image.cpp  image.hpp  pager.cpp  pager.hpp  rcat.cpp  renderer.cpp  renderer.hpp  rless.cpp  terminal.cpp  terminal.hpp  version.hpp.in  wrap.cpp  wrap.hpp
src/lang/: lang_build.cpp  lang_c_family.cpp  lang_common.cpp  lang_common.hpp  lang_css.cpp  lang_erlang.cpp  lang_haskell.cpp  lang_ini.cpp  lang_json.cpp  lang_lisp.cpp  lang_lua.cpp  lang_markup.cpp  lang_misc.cpp  lang_ocaml.cpp  lang_perl.cpp  lang_powershell_tcl.cpp  lang_python.cpp  lang_r_julia.cpp  lang_ruby.cpp  lang_shell.cpp  lang_sql.cpp  lang_toml.cpp  lang_yaml.cpp
tests/: CMakeLists.txt  test_highlight.cpp  test_image.cpp  test_pager.cpp  test_render.cpp  test_wrap.cpp  tsan.supp
tests/fixtures/: sample.json  sample.md  sample.py
